Update About Us

--- a/about-us.html
+++ b/about-us.html
@@ -219,7 +219,7 @@
                         <h4 class="card-title pb-2 mbr-fonts-style mbr-bold display-5">Ash Dowie</h4>
                         <p class="mbr-text mbr-fonts-style display-4">
                             Founding Director</p>
-                        <div class="mbr-section-btn align-left"><a class="btn btn-md btn-warning display-4" href="about-us.html#ash-dowie">
+                        <div class="mbr-section-btn align-left"><a class="btn btn-md btn-success display-4" href="about-us.html#ash-dowie">
                                 View Profile</a></div>
                     </div>
                 </div>
@@ -238,29 +238,11 @@
                         <h4 class="card-title pb-2 mbr-fonts-style mbr-bold display-5">Terran Ralph</h4>
                         <p class="mbr-text mbr-fonts-style display-4">
                             Paraplanner &amp; Office Manager</p>
-                        <div class="mbr-section-btn align-left"><a class="btn btn-md btn-warning display-4" href="about-us.html#Terran-Ralph">
+                        <div class="mbr-section-btn align-left"><a class="btn btn-md btn-success display-4" href="about-us.html#Terran-Ralph">
                                 View Profile</a></div>
                     </div>
                 </div>
             </div>
-
-
-
-            <div class="card p-3 col-12 col-md-6 col-lg-3">
-                <div class="card-wrapper">
-                    <div class="card-img">
-                        <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" title="" alt="Scott Long" loading="lazy" class="lazyload" data-src="assets/images/scottlong-936x936.png">
-                    </div>
-                    <div class="card-box">
-                        <h4 class="card-title pb-2 mbr-fonts-style mbr-bold display-5">Scott Long</h4>
-                        <p class="mbr-text mbr-fonts-style display-4">
-                            Senior Financial Planner</p>
-                        <div class="mbr-section-btn align-left"><a class="btn btn-md btn-warning display-4" href="about-us.html#Scott-Long">
-                                View Profile</a></div>
-                    </div>
-                </div>
-            </div>
-
 
 
 
@@ -270,13 +252,19 @@
                         <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" title="" alt="Jarrod Hautaniemi" loading="lazy" class="lazyload" data-src="assets/images/jarrod-936x936.png">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title pb-2 mbr-fonts-style mbr-bold display-5">Jarrod Hautaniemi</h4>
-                        <p class="mbr-text mbr-fonts-style display-4">Office Manager</p>
-                        <div class="mbr-section-btn align-left"><a class="btn btn-md btn-warning display-4" href="about-us.html#Jarrod-Hautaniemi">
+                        <h4 class="card-title pb-2 mbr-fonts-style mbr-bold display-5">Scott Long</h4>
+                        <p class="mbr-text mbr-fonts-style display-4">
+                            Associate Financial Advisor</p>
+                        <div class="mbr-section-btn align-left"><a class="btn btn-md btn-success display-4" href="about-us.html#Jarrod-Hautaniemi">
                                 View Profile</a></div>
                     </div>
                 </div>
             </div>
+
+
+
+
+            
 
         </div>
     </div>
@@ -319,24 +307,6 @@
                     <h2 class="mbr-section-title align-left mbr-fonts-style mb-3 display-5"><strong>Terran Ralph</strong></h2>
                     <p class="mbr-text align-left mbr-fonts-style mb-3 display-7">Terran has been with Fiorente Advisory since February 2020. Prior to this, she was working with another Firm in her hometown of Toowoomba. Terran is appreciated for her attention to detail, efficiency and great empathy. She is effectively engaged with insurance, superannuation and investment product specialists, enabling her to provide excellent customer service and build professional and long-term relationships with Fiorente’s growing client base.<br><br>Terran is happily settled on the Sunshine Coast. Away from the office, she enjoys all aspects of health and fitness and spending time with family and friends.</p>
                     <h3 class="mbr-section-subtitle align-left mbr-fonts-style mb-3 display-7"><strong>Paraplanner &amp; Office Manager</strong></h3>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="testimonials1 cid-sx3KkSIzYA" id="Scott-Long">
-    
-    <div class="container">
-        <div class="row justify-content-end">
-            <div class="col-12 col-md-5 col-lg-3 m-auto image-wrapper">
-                <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" alt="Scott Long" loading="lazy" class="lazyload" data-src="assets/images/scottlong-474x474.png">
-            </div>
-            <div class="counter-container m-auto col-12 col-md-7 col-lg-9">
-                <div class="card">
-                    <h2 class="mbr-section-title align-left mbr-fonts-style mb-3 display-5"><strong>Scott Long</strong></h2>
-                    <p class="mbr-text align-left mbr-fonts-style mb-3 display-7">Scott is our Senior Financial Planner with a demonstrated history of working in the banking industry. Skilled in Options, Asset Management, Investment Strategies, and Investment Advisory. Strong finance professional with a Bachelor of Business focused in Double Major in Finance &amp; Accounting from University of Technology, Sydney.<br><br>Scott is focused on the core areas of planning for our clients in particular:</p><ul><li>Personal (Life and Income Protection) insurance</li><li>Superannuation and Investment advice</li><li>Retirement Planning</li><li>Self-managed Super Funds</li></ul>
-                    <h3 class="mbr-section-subtitle align-left mbr-fonts-style mb-3 display-7"><strong>Senior Financial Planner</strong></h3>
                 </div>
             </div>
         </div>
