--- a/book-a-consultation.html
+++ b/book-a-consultation.html
@@ -276,7 +276,7 @@
                 <p class="mbr-text align-left text2 mbr-fonts-style display-4">
                     The Privacy Policy contains information about the circumstances we collect, how to access, and how to raise concerns.<br><a href="privacy.html" class="text-white text-primary" target="_blank"><strong>READ MORE →</strong></a></p>
 
-                <div class="mbr-section-btn align-left"><a class="btn btn-md btn-white-outline display-4" href="assets/files/FSG--AshleyDowiePartA1Jun2021PartB20May2020.pdf" target="_blank"><span class="mobi-mbri mobi-mbri-file mbr-iconfont mbr-iconfont-btn"></span>Ash Dowie (FSG)</a> <a class="btn btn-md btn-white-outline display-4" href="assets/files/FSG--ScottLongPartA1Jun2021PartB27October2020.pdf" target="_blank"><span class="mobi-mbri mobi-mbri-file mbr-iconfont mbr-iconfont-btn"></span>Scott Long (FSG)</a></div>
+                <div class="mbr-section-btn align-left"><a class="btn btn-md btn-white-outline display-4" href="assets/files/FSG--AshleyDowiePartA1Jun2021PartB20May2020.pdf" target="_blank"><span class="mobi-mbri mobi-mbri-file mbr-iconfont mbr-iconfont-btn"></span>Ash Dowie (FSG)</a></div>
 
             </div>
             
